--- a/app/src/main/res/layout/custom_dialog_sp.xml
+++ b/app/src/main/res/layout/custom_dialog_sp.xml
@@ -1,6 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/black"
+    android:gravity="center">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="20sp"
+        android:id="@+id/layout_tensp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sản phẩm:"
+            android:textColor="@color/white"
+            android:textSize="20sp"/>
+
+        <TextView
+            android:id="@+id/tv_dialog_tensp"
+            android:background="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Case Main H61,Cpu G2020,Ram 4g , Hdd 250g,Vga gt730"
+            android:textColor="@color/black"
+            android:layout_marginTop="15sp"
+            android:textSize="20sp"
+            android:padding="10sp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layout_soluong"
+        android:layout_below="@+id/layout_tensp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="20sp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Số lượng:"
+            android:textColor="@color/white"
+            android:textSize="20sp"/>
+
+        <TextView
+            android:id="@+id/tv_dialog_soluong"
+            android:background="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="100"
+            android:textColor="@color/black"
+            android:layout_marginTop="15sp"
+            android:textSize="20sp"
+            android:padding="10sp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_below="@+id/layout_soluong"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="20sp">
+
+        <Button
+            android:layout_marginTop="20sp"
+            android:id="@+id/btn_dialog_thoat"
+            android:textStyle="bold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
+            android:textColor="@color/black"
+            android:text="Thoát"
+            android:padding="15sp"/>
+
+    </LinearLayout>
+
+
+</RelativeLayout>
