--- a/app/src/main/res/layout/fragment_4.xml
+++ b/app/src/main/res/layout/fragment_4.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.Fragment1">
+    tools:context=".Fragment.Fragment1"
+    android:id="@+id/layout_fragment4">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -55,15 +56,17 @@
                 android:text="Số điện thoại: "
                 android:textColor="@color/black"
                 android:textSize="19sp"/>
+
             <EditText
-                android:inputType="phone"
-                android:maxLength="13"
-                android:phoneNumber="true"
+                android:id="@+id/edt_sdt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Số điện thoại"
-                android:id="@+id/edt_sdt"
+                android:inputType="phone"
+                android:maxLength="13"
+                android:phoneNumber="true"
                 tools:ignore="Deprecated" />
+
             <TextView
                 android:layout_marginTop="20sp"
                 android:layout_width="match_parent"
@@ -101,4 +104,4 @@
             android:text="Thêm sản phẩm" />
     </LinearLayout>
 
-</RelativeLayout>
+</ScrollView>
