--- a/app/src/main/res/layout/fragment_5.xml
+++ b/app/src/main/res/layout/fragment_5.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -47,8 +47,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Tên khách hàng"
-                android:id="@+id/edt_gianhap"
-                android:inputType="number"/>
+                android:id="@+id/edt_tenkh" />
             <TextView
                 android:layout_marginTop="20sp"
                 android:layout_width="match_parent"
@@ -58,15 +57,16 @@
                 android:textSize="19sp"/>
             <EditText
                 android:inputType="number"
+                android:maxLength="13"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Số điện thoại"
-                android:id="@+id/edt_giaxuat" />
+                android:id="@+id/edt_sdt" />
             <TextView
                 android:layout_marginTop="20sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Số lượng (mặc định): "
+                android:text="Số lượng: "
                 android:textColor="@color/black"
                 android:textSize="19sp"/>
             <EditText
@@ -78,6 +78,7 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/btn_xuatkho"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/black"
@@ -86,4 +87,4 @@
             android:padding="20sp"/>
     </LinearLayout>
 
-</RelativeLayout>
+</ScrollView>
